Upgrade dev-cmd and simplify slightly. (#126)
Although uv broke backwards compatibility in its lock format for
editable projects necessitating otherwise unrelated workflow 
gymnastics.

C.F.: https://github.com/astral-sh/uv/pull/10622#discussion_r1919472981

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -63,14 +63,28 @@ jobs:
     steps:
       - name: Install the latest version of uv
         if: matrix.docker-platform == '' && matrix.os != 'windows-arm64'
-        uses: astral-sh/setup-uv@v4
+        uses: astral-sh/setup-uv@v5
+      - name: Setup uv
+        if: matrix.docker-platform == '' && matrix.os != 'windows-arm64'
+        run: |
+          export UV="$(which uv)"
+          "${UV}" -V
+          echo UV="${UV}" >> ${GITHUB_ENV}
       - name: Install the latest version of uv
         if: matrix.os == 'windows-arm64'
-        shell: cmd
         run: |
-          "C:\Program Files\Microsoft Visual Studio\2022\Community\Common7\Tools\VsDevCmd.bat"
-          cargo install --git https://github.com/astral-sh/uv uv
-          uv -V
+          CI_BIN_DIR="$(mktemp -d)"
+          echo CI_BIN_DIR="${CI_BIN_DIR}" >> ${GITHUB_ENV}
+          (
+            cd "${CI_BIN_DIR}"
+            curl -fL -O https://github.com/astral-sh/uv/releases/latest/download/uv-x86_64-pc-windows-msvc.zip
+            curl -fL -O https://github.com/astral-sh/uv/releases/latest/download/uv-x86_64-pc-windows-msvc.zip.sha256
+            shasum -c uv-x86_64-pc-windows-msvc.zip.sha256
+            unzip uv-x86_64-pc-windows-msvc.zip
+          )
+          export UV="${CI_BIN_DIR}/uv.exe"
+          "${UV}" -V
+          echo UV="${UV}" >> ${GITHUB_ENV}
       - name: Setup x86_64 Python for Prism
         if: matrix.os == 'windows-arm64'
         run: |
@@ -78,7 +92,7 @@ jobs:
           # PBS, and we need to be able to resolve x86-64 compatible requirements (which include
           # native deps like psutil) for our shiv.
           UV_PYTHON_VERSION=cpython-3.12.8-windows-x86_64-none
-          uv python install ${UV_PYTHON_VERSION}
+          "${UV}" python install ${UV_PYTHON_VERSION}
           echo UV_PYTHON="${UV_PYTHON_VERSION}" >> ${GITHUB_ENV}
       - name: Installing emulators
         if: matrix.docker-platform != ''
@@ -87,7 +101,8 @@ jobs:
         uses: actions/checkout@v4
       - name: Check Formatting & Lints
         if: matrix.docker-platform == ''
-        run: uv run dev-cmd ci --skip test
+        run: |
+          "${UV}" run dev-cmd ci --skip test
       - name: Check Formatting & Lints
         if: matrix.docker-platform != ''
         run: |
@@ -112,7 +127,8 @@ jobs:
           echo SCIE_BASE=C:/tmp/gha/nce >> ${GITHUB_ENV}
       - name: Unit Tests
         if: matrix.docker-platform == ''
-        run: uv run dev-cmd test -- -vvs
+        run: |
+          "${UV}" run dev-cmd test -- -vvs
       - name: Unit Tests
         if: matrix.docker-platform != ''
         run: |
@@ -142,7 +158,8 @@ jobs:
             python:3.12-bookworm bash _ci_test.sh
       - name: Build & Package
         if: matrix.docker-platform == ''
-        run: uv run dev-cmd package
+        run: |
+          "${UV}" run dev-cmd package
       - name: Build & Package
         if: matrix.docker-platform != ''
         run: |
@@ -161,7 +178,8 @@ jobs:
               "
       - name: Generate Doc Site
         if: matrix.docker-platform == ''
-        run: uv run dev-cmd doc linkcheck
+        run: |
+          "${UV}" run dev-cmd doc linkcheck
       - name: Generate Doc Site
         if: matrix.docker-platform != ''
         run: |
@@ -178,3 +196,9 @@ jobs:
                 adduser --disabled-password --gecos '' --gid $(id -g) --uid $(id -u) build &&
                 su build -c 'uv run dev-cmd doc linkcheck'
               "
+      - name: Cleanup
+        if: always()
+        run: |
+          if [[ -n "${CI_BIN_DIR}" && -d "${CI_BIN_DIR}" ]]; then
+            rm -rf "${CI_BIN_DIR}"
+          fi
