--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -86,14 +86,28 @@ jobs:
     steps:
       - name: Install the latest version of uv
         if: matrix.docker-platform == '' && matrix.os != 'windows-arm64'
-        uses: astral-sh/setup-uv@v4
+        uses: astral-sh/setup-uv@v5
+      - name: Setup uv
+        if: matrix.docker-platform == '' && matrix.os != 'windows-arm64'
+        run: |
+          export UV="$(which uv)"
+          "${UV}" -V
+          echo UV="${UV}" >> ${GITHUB_ENV}
       - name: Install the latest version of uv
         if: matrix.os == 'windows-arm64'
-        shell: cmd
         run: |
-          "C:\Program Files\Microsoft Visual Studio\2022\Community\Common7\Tools\VsDevCmd.bat"
-          cargo install --git https://github.com/astral-sh/uv uv
-          uv -V
+          CI_BIN_DIR="$(mktemp -d)"
+          echo CI_BIN_DIR="${CI_BIN_DIR}" >> ${GITHUB_ENV}
+          (
+            cd "${CI_BIN_DIR}"
+            curl -fL -O https://github.com/astral-sh/uv/releases/latest/download/uv-x86_64-pc-windows-msvc.zip
+            curl -fL -O https://github.com/astral-sh/uv/releases/latest/download/uv-x86_64-pc-windows-msvc.zip.sha256
+            shasum -c uv-x86_64-pc-windows-msvc.zip.sha256
+            unzip uv-x86_64-pc-windows-msvc.zip
+          )
+          export UV="${CI_BIN_DIR}/uv.exe"
+          "${UV}" -V
+          echo UV="${UV}" >> ${GITHUB_ENV}
       - name: Setup x86_64 Python for Prism
         if: matrix.os == 'windows-arm64'
         run: |
@@ -101,7 +115,7 @@ jobs:
           # PBS, and we need to be able to resolve x86-64 compatible requirements (which include
           # native deps like psutil) for our shiv.
           UV_PYTHON_VERSION=cpython-3.12.8-windows-x86_64-none
-          uv python install ${UV_PYTHON_VERSION}
+          "${UV}" python install ${UV_PYTHON_VERSION}
           echo UV_PYTHON_ARGS="--python ${UV_PYTHON_VERSION}" >> ${GITHUB_ENV}
       - name: Installing emulators
         if: matrix.docker-platform != ''
@@ -112,7 +126,8 @@ jobs:
           ref: ${{ needs.determine-tag.outputs.release-tag }}
       - name: Package science ${{ needs.determine-tag.outputs.release-tag }} binary
         if: matrix.docker-platform == ''
-        run: uv run ${UV_PYTHON_ARGS} dev-cmd package
+        run: |
+          "${UV}" run ${UV_PYTHON_ARGS} dev-cmd package
       - name: Package science ${{ needs.determine-tag.outputs.release-tag }} binary
         if: matrix.docker-platform != ''
         run: |
@@ -151,3 +166,9 @@ jobs:
           files: dist/science-*
           fail_on_unmatched_files: true
           discussion_category_name: Announcements
+      - name: Cleanup
+        if: always()
+        run: |
+          if [[ -n "${CI_BIN_DIR}" && -d "${CI_BIN_DIR}" ]]; then
+            rm -rf "${CI_BIN_DIR}"
+          fi
