--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,7 @@ concurrency:
   cancel-in-progress: ${{ github.ref != 'refs/heads/main' && !startsWith(github.ref, 'refs/tags/') }}
 env:
   # Work around SIGSEGVs and other errors under some qemu targets.
-  UV_CONCURRENT_INSTALLS: 1
+  UV_CONCURRENT_BUILDS: 1
 jobs:
   org-check:
     name: Check GitHub Organization
@@ -102,10 +102,25 @@ jobs:
         run: docker run --privileged --rm tonistiigi/binfmt --install all
       - name: Checkout Lift
         uses: actions/checkout@v4
+      - name: Restore MyPy Cache
+        id: restore-mypy-cache
+        uses: actions/cache/restore@v4
+        with:
+          path: .mypy_cache
+          # We're using a key suffix / restore-keys prefix trick here to get an updatable cache.
+          # See: https://github.com/actions/cache/blob/main/tips-and-workarounds.md#update-a-cache
+          key: ${{ matrix.os }}-${{ matrix.docker-platform || runner.arch }}-a-scie-lift-mypy-v1-${{ github.run_id }}
+          restore-keys: ${{ matrix.os }}-${{ matrix.docker-platform || runner.arch }}-a-scie-lift-mypy-v1
       - name: Check Formatting & Lints
         if: matrix.docker-platform == ''
         run: |
           "${UV}" run dev-cmd ci --skip test
+      - name: Cache MyPy
+        uses: actions/cache/save@v4
+        if: github.ref == 'refs/heads/main'
+        with:
+          path: .mypy_cache
+          key: ${{ steps.restore-mypy-cache.outputs.cache-primary-key }}
       - name: Check Formatting & Lints
         if: matrix.docker-platform != ''
         run: |
