--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -134,7 +134,7 @@ jobs:
             adduser -D -g '' -G build -u $(id -u) build
             apk add git gcc python3-dev musl-dev linux-headers
           else
-            adduser --disabled-password --gecos '' --group build --uid $(id -u) build
+            adduser --disabled-password --gecos '' --gid $(id -g) --uid $(id -u) build
           fi
 
           su build -c 'uv run dev-cmd ci --skip test'
@@ -183,7 +183,7 @@ jobs:
             adduser -D -g '' -G build -u $(id -u) build
             apk add git gcc python3-dev musl-dev linux-headers
           else
-            adduser --disabled-password --gecos '' --group build --uid $(id -u) build
+            adduser --disabled-password --gecos '' --gid $(id -g) --uid $(id -u) build
           fi
 
           su build -c "uv run dev-cmd test -- -vvs"
@@ -210,7 +210,7 @@ jobs:
             adduser -D -g '' -G build -u $(id -u) build
             apk add git gcc python3-dev musl-dev linux-headers
           else
-            adduser --disabled-password --gecos '' --group build --uid $(id -u) build
+            adduser --disabled-password --gecos '' --gid $(id -g) --uid $(id -u) build
           fi
 
           su build -c 'uv run dev-cmd package'
@@ -237,7 +237,7 @@ jobs:
             adduser -D -g '' -G build -u $(id -u) build
             apk add git gcc python3-dev musl-dev linux-headers
           else
-            adduser --disabled-password --gecos '' --group build --uid $(id -u) build
+            adduser --disabled-password --gecos '' --gid $(id -g) --uid $(id -u) build
           fi
 
           su build -c 'uv run dev-cmd doc linkcheck'
