--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -148,7 +148,7 @@ jobs:
           addgroup --gid $(id -g) build
           if [ "${{ matrix.docker-image }}" = "python:3.12-alpine" ]; then
             adduser -D -g '' -G build -u $(id -u) build
-            apk add git gcc python3-dev musl-dev linux-headers
+            apk add gcc git linux-headers musl-dev python3-dev
           else
             adduser --disabled-password --gecos '' --gid $(id -g) --uid $(id -u) build
           fi
