Fix bash test in sh.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -167,12 +167,12 @@ jobs:
         if: matrix.docker-image != ''
         run: |
           cat << EOF > _test.sh
-          if [[ "${{ matrix.docker-platform }}" = "linux/s390x" ]]; then
+          if [ "${{ matrix.docker-platform }}" = "linux/s390x" ]; then
             # This hack gets the PyPy provider tests working on this image. The old PyPy s390x
             # distributions dynamically link libffi at an older version than I've been able to
             # find a multi-platform image with s390x support for.
             ln -s /usr/lib/s390x-linux-gnu/libffi.so.8 /usr/lib/s390x-linux-gnu/libffi.so.6
-          elif [[ "${{ matrix.docker-platform }}" = "linux/ppc64le" ]]; then
+          elif [ "${{ matrix.docker-platform }}" = "linux/ppc64le" ]; then
             echo "Skipping tests on ppc64le."
             exit 0
           fi
