--- a/scripts/docker/uv/Dockerfile
+++ b/scripts/docker/uv/Dockerfile
@@ -9,7 +9,12 @@ COPY --from=ephemeral uv.lock .
 RUN chown -R build:build /code
 
 USER build
+
+# Work around SIGSEGVs and other errors under some qemu targets.
+ENV UV_CONCURRENT_BUILDS=1
+# Silence warning about needing to copy since we know /code/.venv lives on a bind mount.
 ENV UV_LINK_MODE=copy
+
 RUN uv sync --frozen --no-install-project && rm pyproject.toml uv.lock
 
-ENTRYPOINT ["uv", "run", "dev-cmd"]
+ENTRYPOINT ["uv", "run", "--frozen", "dev-cmd"]
