--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -69,6 +69,7 @@ jobs:
     env:
       FORCE_COLOR: 1
       SCIENCE_AUTH_API_GITHUB_COM_BEARER: ${{ secrets.GITHUB_TOKEN }}
+      SCIENCE_NET_TIMEOUT: 30.0
     steps:
       - name: Install the latest version of uv
         if: matrix.os != 'windows-arm64'
@@ -100,7 +101,7 @@ jobs:
           # N.B.: We use an x86-64 Python for Windows ARM64 because this is what we ship with via
           # PBS, and we need to be able to resolve x86-64 compatible requirements (which include
           # native deps like psutil) for our shiv.
-          UV_PYTHON_VERSION=cpython-3.12.9-windows-x86_64-none
+          UV_PYTHON_VERSION=cpython-3.12.11-windows-x86_64-none
           "${UV}" python install ${UV_PYTHON_VERSION}
           echo UV_PYTHON="${UV_PYTHON_VERSION}" >> ${GITHUB_ENV}
       - name: Checkout Lift
