--- a/tests/data/platform-specs.toml
+++ b/tests/data/platform-specs.toml
@@ -6,6 +6,7 @@ platforms = [
     "linux-aarch64",
     "linux-armv7l",
     "linux-powerpc64",
+    "linux-riscv64",
     "linux-s390x",
     {platform = "linux-x86_64", libc = "gnu"},
     {platform = "linux-x86_64", libc = "musl"},
